--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
       {{ content }}
 
       <footer class="site-footer">
-          <span class="site-footer-owner">This website is maintained by the <a href="">Sophia at ZAS</a>.</span>
+          <span class="site-footer-owner">This website is maintained by <a href="">Sophia at ZAS</a>.</span>
 	  <span class="site-footer-credits">Please read our <a href="/legal">Legal Notice</a> and <a href="">Privacy Notice</a>.</span>
 	  </br>
 	  <span class="site-footer-credits">Latest website update: {{ "now" | date: "%Y-%m-%d %H:%M" }}</span>
