--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 
       <footer class="site-footer">
           <span class="site-footer-owner">This website is maintained by <a href="">Sophia at ZAS</a>.</span>
-	  <span class="site-footer-credits">Please read our <a href="/legal">Legal Notice</a>.</span>
+	  <span class="site-footer-credits">Please read our [Legal Notice](https://dgfs-clschool22.github.io/organization) in the Organization section.</span>
 	  </br>
 	  <span class="site-footer-credits">Latest website update: {{ "now" | date: "%Y-%m-%d %H:%M" }}</span>
 	  
