--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 <a id="skip-to-content" href="#content">Skip to the content.</a>
 -->
     <header class="page-header" role="banner">
-      <h1 class="project-name">{{ "Computational Linguistics Fall School 2022" | default: site.title |default: site.github.repository_name }}</h1>
+      <h1 class="project-name">{{ "CANCELLATION: Computational Linguistics Fall School 2022" | default: site.title |default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ "September 19-23 at Leibniz-Centre General Linguistics and Humboldt-University Berlin" | default: site.description | default: site.github.project_tagline }}</h2>
       {% include nav.html %}
       {% if site.github.is_project_page and site.show_downloads %}
